--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 @keyframes rotateAnimation {
   0% {
-    transform: rotate(0deg) scale(1.1, 1.1);
+    transform: rotate(0deg) scale(1.0, 1.0);
   }
   100% {
     transform: rotate(-360deg) scale(1.0, 1.0);
@@ -85,11 +85,11 @@ body {
   height:auto;
   margin:auto;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.6s;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .butImg:hover{
-  transform: scale(1.1, 1.1);
+  /* transform: scale(1.1, 1.1); */
 }
 
 .add_rotate{
